"""
Scan Trajectory Value Object

Responsibility:
- Encapsulate the ordered list of positions to visit during a scan.
- Represents the "Consignes" (Instructions) generated by the Domain.
- Immutable.
"""

from dataclasses import dataclass
from typing import List, Iterator
from ..geometric.position_2d import Position2D

@dataclass(frozen=True)
class ScanTrajectory:
    """
    Ordered sequence of positions for a scan.
    """
    points: List[Position2D]
    
    def __iter__(self) -> Iterator[Position2D]:
        return iter(self.points)
    
    def __len__(self) -> int:
        return len(self.points)
    
    def __getitem__(self, index) -> Position2D:
        return self.points[index]
    
    @property
    def total_points(self) -> int:
        return len(self.points)
